Config project for android development

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,6 +129,8 @@ android {
     }
 
     defaultConfig {
+        missingDimensionStrategy 'react-native-camera', 'general' <-- insert this line
+        
         applicationId "com.allergikollen"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
