--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,14 @@ target 'allergikollen' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
+  pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
+
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+  
+  permissions_path = '../node_modules/react-native-permissions/ios'
+
   target 'allergikollenTests' do
     inherit! :complete
     # Pods for testing
