--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.63.4",
-    "react-native-camera": "^3.42.0",
-    "react-native-permissions": "^3.0.0",
-    "react-native-qrcode-scanner": "^1.5.3",
-    "react-native-windows": "^0.63.0-0"
+    "react-native": "0.63.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
