--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "react-native-camera": "^3.42.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^4.7.1",
-    "react-native-reanimated": "^1.13.2",
+    "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-typography": "^1.4.1",
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
+    "react-navigation-stack": "^2.10.2",
     "react-navigation-tabs": "^2.10.1"
   },
   "devDependencies": {
