--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "@ui-kitten/components": "^5.0.0",
+    "dotenv": "^8.2.0",
     "expo": "^40.0.1",
     "expo-barcode-scanner": "~9.1.0",
     "expo-permissions": "~10.0.0",
@@ -21,11 +24,13 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-camera": "^3.42.0",
+    "react-native-dotenv": "^2.5.3",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-svg": "^12.1.0",
     "react-native-typography": "^1.4.1",
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
