--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
+    "@expo/webpack-config": "^0.12.58",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "@ui-kitten/components": "^5.0.0",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "expo": "^40.0.1",
     "expo-barcode-scanner": "~9.1.0",
