Import Kitten Ui icons

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "@ui-kitten/components": "^5.0.0",
+    "@ui-kitten/eva-icons": "^5.0.0",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "expo": "^40.0.1",
@@ -32,7 +33,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-svg": "^12.1.0",
+    "react-native-svg": "12.1.0",
     "react-native-typography": "^1.4.1",
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
