--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "axios": "^0.21.1",
+    "axios-hooks": "^2.3.0",
     "dotenv": "^8.2.0",
     "expo": "^40.0.1",
     "expo-barcode-scanner": "~9.1.0",
