--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
+    "@expo-google-fonts/inter": "^0.1.0",
+    "@expo-google-fonts/poppins": "^0.1.0",
     "@expo/webpack-config": "^0.12.58",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.7",
@@ -22,6 +24,7 @@
     "dotenv": "^8.2.0",
     "expo": "^40.0.1",
     "expo-barcode-scanner": "~9.1.0",
+    "expo-font": "~8.4.0",
     "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
